--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             channel: "stable"
         - run: flutter pub get
         - run: flutter clean
-        - run: flutter build appbundle
+        - run: flutter build apk
 
 
 
