--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         - run: flutter pub get
         - run: flutter analyze
         - run: flutter test
-        - run: flutter build apk
+        - run: flutter build apk --release --verbose
 
 
 
