--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,25 @@ jobs:
       name: Run flutter test and analyze
       runs-on: macos-latest
       steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v1
+        - name: Checkout Repository
+          uses: actions/checkout@v3
+
+        - name: Set Up Java
+          uses: actions/setup-java@v3.12.0
           with:
-            java-version: "12.x"
-        - uses: subosito/flutter-action@v1
+            distribution: 'oracle'
+            java-version: '17'
+
+        - name: Set Up Flutter
+          uses: subosito/flutter-action@v2
           with:
-            channel: "stable"
-        - run:  flutter doctor -v
-        - run: flutter pub get
+            flutter-version: '3.22.0'
+            channel: 'stable'
+
+        - name: Install Dependencies
+          run: flutter pub get
+
+
         - run: flutter analyze
         - run: flutter test
         - run: flutter build apk --release --verbose
