--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,19 @@ jobs:
         - name: Install Dependencies
           run: flutter pub get
 
+        - name: Decode Keystore
+          run: |
+                echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
 
-        - run: flutter analyze
-        - run: flutter test
-        - run: flutter build apk --release --verbose
+        - name: Create key.properties
+          run: |
+            echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
+            echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+            echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+            echo "storeFile=keystore.jks" >> android/key.properties
+        
+
+        - run: flutter build apk --release
 
 
 
