--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,14 +47,18 @@ jobs:
         run: |
           cd build
           tar -czf ios_build.tar.gz ios
+          
+
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@main
         with:
           name: Releases
           path: |
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
             build/ios_build.tar.g
+            
+
       - name: Extract version from pubspec.yaml
         id: extract_version
         run: >
