--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,3 +65,11 @@ jobs:
           version=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | tr -d '\r')
 
           echo "VERSION=$version" >> $GITHUB_ENV
+          
+
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        with:
+                    artifacts: build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz
+                    tag: v${{ env.VERSION }}
+                    token: ${{ secrets.TOKEN }}
