--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,56 +23,12 @@ jobs:
           channel: stable
       - name: Install Dependencies
         run: flutter pub get
-      - name: Decode Keystore
-        run: >
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode >
-          android/app/keystore.jks
-      - name: Create key.properties
-        run: >
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >
-          android/key.properties
 
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-
-          echo "storeFile=keystore.jks" >> android/key.properties
-      - name: Build APK
-        run: flutter build apk --release
-      - name: Build appBundle
-        run: flutter build appbundle
-
-      - name: Build IPA
-        run: flutter build ipa --no-codesign
-      - name: Compress Archives and IPAs
+      - name: Install iOS dependencies
         run: |
-          cd build
-          tar -czf ios_build.tar.gz ios
-
-  
+          cd ios
+          pod install --repo-update
+          cd ..
           
-
-#      - name: Upload Artifacts
-#        uses: actions/upload-artifact@main
-#        with:
-#          name: Releases
-#          path: |
-#            build/app/outputs/flutter-apk/app-release.apk
-#            build/app/outputs/bundle/release/app-release.aab
-#            build/ios_build.tar.g
-#
-#
-#      - name: Extract version from pubspec.yaml
-#        id: extract_version
-#        run: >
-#          version=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | tr -d '\r')
-#
-#          echo "VERSION=$version" >> $GITHUB_ENV
-#
-#
-#      - name: Create Release
-#        uses: ncipollo/release-action@v1
-#        with:
-#            artifacts: build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz
-#            tag: v${{ env.VERSION }}
-#            token: ${{ secrets.TOKEN }}
+      - name: Build iOS
+        run: flutter build ios --debug --build-name=1.0.0 --build-number=1 --no-codesign
