--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Install iOS dependencies
-        run: |
-          cd ios
-          pod install --repo-update
-          cd ..
+#      - name: Install iOS dependencies
+#        run: |
+#          cd ios
+#          pod install --repo-update
+#          cd ..
           
       - name: Build iOS
         run: flutter build ios --debug --build-name=1.0.0 --build-number=1 --no-codesign
