--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,23 @@ jobs:
 #          pod install --repo-update
 #          cd ..
           
-      - name: Build iOS
-        run: flutter build ios --debug --build-name=1.0.0 --build-number=1 --no-codesign
+      - run: flutter build ios --release --no-codesign
+
+      - run: mkdir Payload
+        working-directory: build/ios/iphoneos
+
+      - run: mv Runner.app/ Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Zip output
+        run: zip -qq -r -9 FlutterIpaExport.ipa Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+              repo_token: ${{ secrets.GITHUB_TOKEN }}
+              file: build/ios/iphoneos/FlutterIpaExport.ipa
+              tag: v1.0
+              overwrite: true
+              body: "This is first release"
