--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,14 @@ jobs:
         run: zip -qq -r -9 FlutterIpaExport.ipa Payload
         working-directory: build/ios/iphoneos
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-              repo_token: ${{ secrets.GITHUB_TOKEN }}
-              file: build/ios/iphoneos/FlutterIpaExport.ipa
-              tag: v1.0
-              overwrite: true
-              body: "This is first release"
+      - name: Install Fastlane
+        run: gem install fastlane
+
+#      - name: Upload binaries to release
+#        uses: svenstaro/upload-release-action@v2
+#        with:
+#              repo_token: ${{ secrets.TOKEN }}
+#              file: build/ios/iphoneos/FlutterIpaExport.ipa
+#              tag: v1.0
+#              overwrite: true
+#              body: "This is first release"
