--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,20 +30,16 @@ jobs:
 #          pod install --repo-update
 #          cd ..
           
-      - run: flutter build ios --release --no-codesign
 
-      - run: mkdir Payload
-        working-directory: build/ios/iphoneos
 
-      - run: mv Runner.app/ Payload
-        working-directory: build/ios/iphoneos
+      - run: flutter build ipa --export-options-plist=ios/exportOptions.plist
 
-      - name: Zip output
-        run: zip -qq -r -9 FlutterIpaExport.ipa Payload
-        working-directory: build/ios/iphoneos
+      - name: Upload to TestFlight
+        uses: fastlane/setup-fastlane@v2
+        with:
+          ruby-version: '2.7'
+      - run: bundle exec fastlane pilot upload --api_key ${{ secrets.APP_STORE_CONNECT_KEY }}
 
-      - name: Install Fastlane
-        run: gem install fastlane
 
 #      - name: Upload binaries to release
 #        uses: svenstaro/upload-release-action@v2
