APP_STORE_CONNECT_KEY

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,28 @@ jobs:
 #          cd ..
           
 
-
-      - run: flutter build ipa --export-options-plist=ios/exportOptions.plist
-
-      - name: Upload to TestFlight
-        uses: fastlane/setup-fastlane@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7'
-      - run: bundle exec fastlane pilot upload --api_key ${{ secrets.APP_STORE_CONNECT_KEY }}
+          ruby-version: '3.0'  # Use a compatible Ruby version for Fastlane
+
+
+      - name: Install Fastlane
+        run: sudo gem install fastlane
+
+      - name: Set up App Store Connect API Key
+        env:
+          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
+          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
+          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+        run: |
+          mkdir -p ~/private_keys
+          echo "$APP_STORE_CONNECT_KEY" > ~/private_keys/AuthKey_$APP_STORE_CONNECT_KEY_ID.p8
+
+      - name: Run Fastlane to build and upload
+        run: |
+          cd ios
+          fastlane beta
 
 
 #      - name: Upload binaries to release
