--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,29 +37,40 @@ jobs:
           ruby-version: '3.0'  # Use a compatible Ruby version for Fastlane
 
 
-      - name: Install Fastlane
-        run: sudo gem install fastlane
-
-      - name: Set up App Store Connect API Key
+      - name: Install Apple Certificate
         env:
-          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
-          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
-          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+           IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
         run: |
-          mkdir -p ~/private_keys
-          echo "$APP_STORE_CONNECT_KEY" > ~/private_keys/AuthKey_$APP_STORE_CONNECT_KEY_ID.p8
+            echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios_certificate.p12
+            security create-keychain -p "" build.keychain
+            security import ios_certificate.p12 -t agg -k ~/Library/Keychains/build.keychain -P "$IOS_CERTIFICATE_PASSWORD" -A
+            security list-keychains -s ~/Library/Keychains/build.keychain
+            security default-keychain -s ~/Library/Keychains/build.keychain
+            security set-keychain-settings -lut 21600
+            security unlock-keychain -p "" ~/Library/Keychains/build.keychain
 
-      - name: Run Fastlane to build and upload
+      - name: Install Provisioning Profile
+        env:
+          IOS_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
         run: |
-          cd ios
-          fastlane beta
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          echo "PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/provisioning.mobileprovision
 
+      - name: Install dependencies
+        run: flutter pub get
 
-#      - name: Upload binaries to release
-#        uses: svenstaro/upload-release-action@v2
-#        with:
-#              repo_token: ${{ secrets.TOKEN }}
-#              file: build/ios/iphoneos/FlutterIpaExport.ipa
-#              tag: v1.0
-#              overwrite: true
-#              body: "This is first release"
+      - name: Build iOS Release
+        run: flutter build ipa --release --export-options-plist=ios/exportOptions.plist
+
+      - name: Upload IPA to TestFlight
+        env:
+          APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
+          APP_STORE_CONNECT_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
+          APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+        run: |
+          echo "$APP_STORE_CONNECT_KEY" | base64 --decode > AuthKey.p8
+          xcrun altool --upload-app -f build/ios/ipa/*.ipa \
+          --type ios \
+          --apiKey "$APP_STORE_CONNECT_KEY_ID" \
+          --apiIssuer "$APP_STORE_CONNECT_ISSUER_ID"
