flutter build ipa --release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         run: flutter pub get
 
       - name: Build iOS Release
-        run: flutter build ipa --release --export-options-plist=ios/exportOptions.plist
+        run: flutter build ipa --release
 
       - name: Upload IPA to TestFlight
         env:
