--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -6,7 +6,7 @@
 	<string>export</string>
 	<key>method</key>
 	<string>release-testing</string>
-	<key>app-store</key>
+	<key>release-testing</key>
 	<string>automatic</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
