--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,9 @@
 name: Flutter CI CD
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 jobs:
-  flutter_test:
-    name: Run flutter test and analyze
+  build:
     runs-on: macos-latest
     steps:
       - name: Checkout Repository
@@ -21,101 +19,17 @@ jobs:
         with:
           flutter-version: 3.22.0
           channel: stable
+          architecture: x64
+
       - name: Install Dependencies
         run: flutter pub get
 
-#      - name: Install iOS dependencies
-#        run: |
-#          cd ios
-#          pod install --repo-update
-#          cd ..
-          
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+            ruby-version: '3.0'
+            bundler-cache: true
 
-#      - name: Set up Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: '3.0'  # Use a compatible Ruby version for Fastlane
+      - name: Flutter Build iOS
+        run: flutter build ios --release --no-codesign
 
-      - name: Enable Automatic Signing in Xcode
-        run: |
-          mkdir -p ~/Library/Developer/Xcode/UserData/
-          echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?>
-          <plist version=\"1.0\">
-          <dict>
-            <key>DisableAutomaticSigning</key>
-            <false/>
-           </dict>
-          </plist>" > ~/Library/Developer/Xcode/UserData/IDETemplateMacros.plist
-
-      - name: Configure Xcode Project for Automatic Signing
-        run: |
-          sudo gem install xcodeproj
-          ruby -e "
-            require 'xcodeproj';
-            project_path = 'ios/Runner.xcodeproj';
-            project = Xcodeproj::Project.open(project_path);
-            project.targets.each do |target|
-              target.build_configurations.each do |config|
-                config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
-                config.build_settings['DEVELOPMENT_TEAM'] = '${{ secrets.APPLE_TEAM_ID }}'
-              end
-            end;
-            project.save;
-          "
-
-      - name: Install Apple Certificate
-        env:
-           IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-        run: |
-            echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios_certificate.p12
-            security create-keychain -p "" build.keychain
-            security import ios_certificate.p12 -t agg -k ~/Library/Keychains/build.keychain -P "$IOS_CERTIFICATE_PASSWORD" -A
-            security list-keychains -s ~/Library/Keychains/build.keychain
-            security default-keychain -s ~/Library/Keychains/build.keychain
-            security set-keychain-settings -lut 21600
-            security unlock-keychain -p "" ~/Library/Keychains/build.keychain
-
-      - name: Install Provisioning Profile
-        env:
-          IOS_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
-        run: |
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISION_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/provisioning.mobileprovision
-
-      - name: run flutter clean
-        run: flutter clean
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Verify Installed Certificates
-        run: security find-identity -v -p codesigning
-
-      - name: Pre-download Xcode dependencies
-        run: |
-         sudo xcodebuild -runFirstLaunch
-         sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
-         xcodebuild -downloadAllPlatforms
-
-      - name: Build iOS Release
-        run: flutter build ipa --release
-
-#      - name: Manual Xcode Archive & Export
-#        run: |
-#              xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/Runner.xcarchive
-#              xcodebuild -exportArchive -archivePath build/ios/Runner.xcarchive -exportOptionsPlist ios/ExportOptions.plist -exportPath build/ios/ipa
-
-
-
-      - name: Upload IPA to TestFlight
-        env:
-          APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
-          APP_STORE_CONNECT_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
-          APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
-        run: |
-          echo "$APP_STORE_CONNECT_KEY" | base64 --decode > AuthKey.p8
-          xcrun altool --upload-app -f build/ios/ipa/*.ipa \
-          --type ios \
-          --apiKey "$APP_STORE_CONNECT_KEY_ID" \
-          --apiIssuer "$APP_STORE_CONNECT_ISSUER_ID"
