--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy to App Store
         uses: apple-actions/upload-testflight@v1
         with:
-            app-path: build/ios/ipa/*.ipa
+            app-path: build/ios/ipa/Runner.ipa
             api-key-id: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
             api-private-key: ${{ secrets.APP_STORE_CONNECT_KEY }}
             api-key-issuer-id: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
