--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Flutter Build iOS
         run: flutter build ios --release --no-codesign
 
+      - name: Build iOS IPA
+        run: |
+              cd ios
+              xcodebuild -workspace Runner.xcworkspace -scheme Runner -configuration Release archive -archivePath build/Runner.xcarchive
+              xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/ios/ipa
+
       - name: Install Apple Certificate
         uses: apple-actions/import-codesign-certs@v3
         with:
