IOS_CERTIFICATE_BASE64

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,17 @@ jobs:
             project.save;
           "
       - name: Install Apple Certificate
-        uses: apple-actions/import-codesign-certs@v3
-        with:
-          p12-file-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-          p12-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+        env:
+          IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+        run: |
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios_certificate.p12
+          security create-keychain -p "" build.keychain
+          security import ios_certificate.p12 -k ~/Library/Keychains/build.keychain -P "$IOS_CERTIFICATE_PASSWORD" -A
+          security list-keychains -s ~/Library/Keychains/build.keychain
+          security default-keychain -s ~/Library/Keychains/build.keychain
+          security set-keychain-settings -lut 21600
+          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
 
       - name: Build iOS IPA
         run: |
