--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -3,9 +3,15 @@
 <plist version="1.0">
 <dict>
     <key>method</key>
-    <string>development</string>
+    <string>app-store</string>
     <key>signingStyle</key>
     <string>automatic</string>
+    <key>stripSwiftSymbols</key>
+    <true/>
+    <key>uploadBitcode</key>
+    <false/>
+    <key>uploadSymbols</key>
+    <true/>
     <key>teamID</key>
     <string>2WUMZJWXX8</string>
     <key>provisioningProfiles</key>
