--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,14 @@ jobs:
 
 
       - name: Build iOS app
-        run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+        uses: cedvdb/action-flutter-build-ios@v1
+        with:
+        # always use --export-options-plist=ios/GithubActionsExportOptions.plist
+            build-cmd: flutter build ipa --release --flavor dev --export-options-plist=ios/GithubActionsExportOptions.plist
+            certificate-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+            certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+            provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+            keychain-password: ${{ secrets.IOS_GITHUB_KEYCHAIN_PASSWORD }}
 
       - name: Deploy to App Store
         uses: apple-actions/upload-testflight-build@v1
