Upload binaries to release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,84 +34,32 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-            ruby-version: '3.0'
-            bundler-cache: true
+
 
       - name: Install CocoaPods
         run: |
              cd ios
              pod install
 
-      - name: Enable Automatic Signing in Xcode
-        run: |
-          mkdir -p ~/Library/Developer/Xcode/UserData/
-          echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?>
-          <plist version=\"1.0\">
-          <dict>
-            <key>DisableAutomaticSigning</key>
-            <false/>
-           </dict>
-          </plist>" > ~/Library/Developer/Xcode/UserData/IDETemplateMacros.plist
 
-      - name: Configure Xcode Project for Automatic Signing
-        run: |
-          sudo gem install xcodeproj
-          ruby -e "
-            require 'xcodeproj';
-            project_path = 'ios/Runner.xcodeproj';
-            project = Xcodeproj::Project.open(project_path);
-            project.targets.each do |target|
-              target.build_configurations.each do |config|
-                config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
-                config.build_settings['DEVELOPMENT_TEAM'] = '${{ secrets.APPLE_TEAM_ID }}'
-              end
-            end;
-            project.save;
-          "
-      - name: Install Apple Certificate
-        env:
-          IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-        run: |
-          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios_certificate.p12
-          security create-keychain -p "" build.keychain
-          security import ios_certificate.p12 -k ~/Library/Keychains/build.keychain -P "$IOS_CERTIFICATE_PASSWORD" -A
-          security list-keychains -s ~/Library/Keychains/build.keychain
-          security default-keychain -s ~/Library/Keychains/build.keychain
-          security set-keychain-settings -lut 21600
-          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
+      - name: Build iOS
+        run: flutter build ios --release --no-codesign
 
-      - name: Install Provisioning Profile
-        env:
-          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
-        run: |
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/provisioning.mobileprovision
+      - run: mkdir Payload
+        working-directory: build/ios/iphoneos
 
+      - run: mv Runner.app/ Payload
+        working-directory: build/ios/iphoneos
 
-      - name: Build iOS app
-        uses: cedvdb/action-flutter-build-ios@v1
+      - name: Zip output
+        run: zip -qq -r -9 FlutterIpaExport.ipa Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-        # always use --export-options-plist=ios/GithubActionsExportOptions.plist
-            build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
-            certificate-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-            certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-            provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
-            keychain-password: ${{ secrets.IOS_GITHUB_KEYCHAIN_PASSWORD }}
-
-
-      - name: Upload IPA to GitHub Actions
-        uses: actions/upload-artifact@v4
-        with:
-          name: iOS-Release-IPA
-          path: build/ios/ipa/*.ipa
-#      - name: Deploy to App Store
-#        uses: apple-actions/upload-testflight-build@v1
-#        with:
-#            app-path:  "build/ios/archive/Runner.xcarchive"
-#            api-key-id: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
-#            api-private-key: ${{ secrets.APP_STORE_CONNECT_KEY }}
-#            issuer-id: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          repo_token: ${{ secrets.TOKEN }}
+          file: build/ios/iphoneos/FlutterIpaExport.ipa
+          tag: v1.0
+          overwrite: true
+          body: "This is first release"
