--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
 
 
       - name: Build iOS
-        run: flutter build ios --release --no-codesign
+        run: flutter build ios --debug --build-name=1.1.0 --build-number=3 --no-codesign
 
       - run: mkdir Payload
         working-directory: build/ios/iphoneos
